tab area collaps fixing and responsive styling

--- a/wp-content/themes/ddp-refresh/css/sass/partials/_theme-carousels.scss
+++ b/wp-content/themes/ddp-refresh/css/sass/partials/_theme-carousels.scss
@@ -23,7 +23,7 @@
 
 .carousel__slide__container {
   position: relative;
-  padding-bottom: 15.6096%;
+  padding-bottom: (622/1265)*100%;
   min-height: 490px;
   overflow: hidden;
 
@@ -49,7 +49,6 @@
   transform: translateY(-50%);
   width: 100%;
   font-family: $font-accent-light;
-  @include flex-text(320, 1265, 16, 24);
   line-height: (26/24);
   text-align: center;
   padding: 42px (115/1265)*100% 52px;
@@ -68,7 +67,9 @@
 }
 
 .carousel__slide__content__copy {
-  width: 65%;
+  width: 100%;
+  max-width: 672.75px;
+  @include flex-text(320, 1265, 18, 24);
   letter-spacing: -0.75px;
   color: $color-alt-4;
   margin: {
