--- a/wp-content/themes/ddp-refresh/css/sass/partials/_theme-tabs.scss
+++ b/wp-content/themes/ddp-refresh/css/sass/partials/_theme-tabs.scss
@@ -17,16 +17,21 @@
 }
 
 .tabs__tab {
-  display: table-cell;
+  vertical-align: bottom;
   text-align: center;
   font-family: $font-accent-light;
   line-height: 0.85;
   letter-spacing: -0.5px;
   color: white;
-  padding: 0 5px;
+  padding: 5px;
 
   .tabs--landing & {
     font-size: rem(24px);
+
+    @include respond-min(em(575px)) {
+      display: table-cell;
+      padding: 0 5px;
+    }
   }
 }
 
